# ExchangeSharp

./: README.md
2020_SP2/src/Direct/: Classes.cs
2020_SP2/test/VerifyStructSizes/: VerifyStructSizes.cs
2020_SP2_U1/examples/: .gitignore
2020_SP2_U1/src/: Library.cs
2020_SP2_U1/src/Direct/: API.cs  Constants.cs  Enums.cs  Structs.cs
2021_SP1_U1/examples/ImportExport/: README.md
2021_SP1_U1/src/: ExchangeSharp.csproj
2021_SP1_U1/src/Direct/: API.cs  Classes.cs  Constants.cs  Enums.cs  Structs.cs
2021_SP1_U1/test/VerifyStructSizes/: VerifyStructSizes.cs
2021_SP2/src/Direct/: API.cs  Structs.cs
2021_SP2_U1/examples/CountPartInstances/: CountPartInstances.csproj
2021_SP2_U1/src/Direct/: Enums.cs
2021_SP2_U2/examples/ImportExport/: ImportExport.cs
2021_SP2_U2/src/Direct/: Classes.cs  Constants.cs
2021_SP2_U2/test/VerifyStructSizes/: VerifyStructSizes.cs
2021_U1/src/Direct/: API.cs  Enums.cs  Structs.cs
2021_U2/src/Direct/: Classes.cs  Constants.cs
2021_U2/test/VerifyStructSizes/: VerifyStructSizes.cs
2022/examples/CallbacksReport/: README.md
2022/src/Direct/: API.cs  Classes.cs
2022_SP1/src/: Library.cs
2022_SP1/test/VerifyStructInitializers/: CMakeLists.txt
2022_U1/src/: Library.cs
2022_U1/src/Direct/: API.cs  (+1 more)
2023/src/: Library.cs
ExchangeSharp/: ExchangeSharp.csproj  Library.cs
ExchangeSharp/Direct/: API.cs  Classes.cs  Enums.cs  Structs.cs
examples/CountPartInstances/: CountPartInstances.cs
examples/ImportExport/: ImportExport.cs
examples/PrintProductStructure/: PrintProductStructure.cs  PrintProductStructure.csproj
(+36 files in other folders)
